XML 9.2.13 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 9.2.13.

--- a/Finnish/main/CloudService.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CloudService.apk/res/values-fi-rFI/strings.xml
@@ -179,12 +179,12 @@
   <string name="micloud_main_head_menu_state_close">Pois käytöstä</string>
   <string name="micloud_main_head_menu_state_open">Käytössä</string>
   <string name="micloud_main_head_menu_state_unavailable">Ei tuettu</string>
-  <string name="micloud_main_manual_sync">Manuaalinen synkronointi</string>
+  <string name="micloud_main_manual_sync">Synkronoi manuaalisesti</string>
   <string name="micloud_main_memory_low_title">Puhelimen sisäinen tallennustila on lähes täynnä</string>
   <string name="micloud_main_network_error">Verkkoon ei voi yhdistää</string>
   <string name="micloud_main_simple_last_sync_time">Synkronoitu viimeksi： %s</string>
   <string name="micloud_main_simple_off">Synkronointi pois käytöstä</string>
-  <string name="micloud_main_sync_mode_summary">Jotkut kohteet synkronoituvat näytön ollessa sammuksissa ja laite latauksessa.</string>
+  <string name="micloud_main_sync_mode_summary">Synkronoi useimmat kohteet, kun laturi on yhdistettynä ja näyttö on sammutettuna</string>
   <string name="micloud_main_sync_mode_title">Virransäästötila</string>
   <string name="micloud_main_wait_charge">Jatka synkronointia lataamalla laitteesi täyteen.</string>
   <string name="micloud_main_wait_charge_sleep">Sammuta näyttö ja lataa laitteesi täyteen jatkaaksesi synkronointia.</string>
@@ -211,15 +211,15 @@
   <string name="micloud_manual_local_storage_low_title">Tallennustila on vähissä</string>
   <string name="micloud_manual_network_disconnet_button_text">Verkkoasetukset</string>
   <string name="micloud_manual_network_disconnet_title">Verkkoyhteyttä ei voitu muodostaa</string>
-  <string name="micloud_manual_paused">Synkronointi pysäytetty</string>
+  <string name="micloud_manual_paused">Pysäytetty</string>
   <string name="micloud_manual_pausing">Synkronointi pysäytetty</string>
-  <string name="micloud_manual_pending">Odottaa</string>
+  <string name="micloud_manual_pending">Odottaa…</string>
   <string name="micloud_manual_reactivate">Uudelleenaktivoi</string>
-  <string name="micloud_manual_sync_all">Synkronoi</string>
+  <string name="micloud_manual_sync_all">Synkronoi kaikki kohteet</string>
   <string name="micloud_manual_sync_now">Synkronoi</string>
-  <string name="micloud_manual_sync_pause">Pysäytä</string>
+  <string name="micloud_manual_sync_pause">Pysäytä synkronointi</string>
   <string name="micloud_manual_sync_resume">Jatka synkronointia</string>
-  <string name="micloud_manual_syncing">Synkronoidaan</string>
+  <string name="micloud_manual_syncing">Synkronoidaan…</string>
   <string name="micloud_manual_title">Manuaalinen synkronointi</string>
   <string name="micloud_member_net_error_alert_message">Ei internet-yhteyttä.</string>
   <string name="micloud_member_net_error_alert_title">Verkkoon yhdistäminen epäonnistui</string>
@@ -240,8 +240,8 @@
   <string name="micloud_notif_title_multi_user_error">Mi Pilveen ei voi synkronoida</string>
   <string name="micloud_notif_title_privacy_reopen_failed">Mi Pilvi -palveluiden käyttöönottaminen epäonnistui</string>
   <string name="micloud_notif_title_sync_with_off">Synkronoi Mi Pilveen</string>
-  <string name="micloud_preference_last_sync_time">Edellinen synkronointiaika: %s</string>
-  <string name="micloud_preference_syncing">Synkronoidaan</string>
+  <string name="micloud_preference_last_sync_time">Edellinen synkronointi: %s</string>
+  <string name="micloud_preference_syncing">Synkronoidaan…</string>
   <string name="micloud_privacy_cloud_off">Synkronointi pois käytöstä</string>
   <string name="micloud_privacy_cloud_sync">Ota Mi Pilvi -palvelut käyttöön</string>
   <string name="micloud_privacy_explanation">Hyväksy valtuutus ottaaksesi Mi Pilvi -palvelut käyttöön</string>
@@ -281,20 +281,20 @@
   <string name="micloud_sync_alert_dialog_positive">OK</string>
   <string name="micloud_sync_alert_dialog_title">Käytä Mi Pilveä</string>
   <string name="micloud_sync_prompt_for_no_gallery_sync">Yhteystiedot, Kalenteri ja Muistiot synkronoidaan automaattisesti. Synkronoidaksesi enemmän kohteita, mene Mi Pilven asetuksiin.</string>
-  <string name="micloud_sync_result_already_in_progress">Edellinen synkronointi käynnissä</string>
-  <string name="micloud_sync_result_auth_exception">Todennuspoikkeus</string>
-  <string name="micloud_sync_result_cancel">Synkronointi peruutettiin</string>
-  <string name="micloud_sync_result_cloud_storage_full">Pilven tallennustila on täynnä</string>
+  <string name="micloud_sync_result_already_in_progress">Käsitellään edellistä synkronointia…</string>
+  <string name="micloud_sync_result_auth_exception">Tilivirhe</string>
+  <string name="micloud_sync_result_cancel">Synkronointi keskeytettiin</string>
+  <string name="micloud_sync_result_cloud_storage_full">Mi Pilven tallennustila on täynnä</string>
   <string name="micloud_sync_result_common_message">Ei voitu synkronoida. Odota minuutti tai kaksi ja yritä uudelleen.</string>
   <string name="micloud_sync_result_cta_permission_error">Yhdistä ensin verkkoon</string>
   <string name="micloud_sync_result_internal_error">Sisäinen virhe</string>
-  <string name="micloud_sync_result_io_exception">I/O-poikkeus</string>
-  <string name="micloud_sync_result_parse_exception">Tietojen jäsentämispoikkeus</string>
-  <string name="micloud_sync_result_permission_error">Käyttöoikeusvirhe</string>
-  <string name="micloud_sync_result_request_error">Verkkopyyntövirhe</string>
-  <string name="micloud_sync_result_secure_space_limit">Turvallisessa tilassa ei voi synkronoida</string>
-  <string name="micloud_sync_result_sim_activated_error">SIM-kortti ei ole aktivoitu</string>
-  <string name="micloud_sync_result_wifi_only">Synkronoi käyttäen vain Wi-Fiä</string>
+  <string name="micloud_sync_result_io_exception">I/O-virhe</string>
+  <string name="micloud_sync_result_parse_exception">Tietoja ei voitu jäsentää</string>
+  <string name="micloud_sync_result_permission_error">Käyttöoikeuksiin liittyvä virhe</string>
+  <string name="micloud_sync_result_request_error">Synkronointipyyntövirhe</string>
+  <string name="micloud_sync_result_secure_space_limit">Älä synkronoi kohteita Toisesta tilasta</string>
+  <string name="micloud_sync_result_sim_activated_error">SIM-kortin aktivointivirhe</string>
+  <string name="micloud_sync_result_wifi_only">Synkronoi vain Wi-Fillä</string>
   <string name="micloud_upgrade_member">Hanki tallennustilaa</string>
   <string name="micloud_user_space_title">Tallennustila</string>
   <string name="micloud_warn_full_sum">Uusia kohteita ei synkronoida Mi Pilveen.</string>
@@ -378,7 +378,7 @@ Tämä toiminto salaa ja lähettää laitteesi ID-tunnuksen Mi:n palvelimille."<
   <string name="sync_item_calllog_title">Synkronoi puheluhistoria</string>
   <string name="sync_item_sms_summary">Synkronoi tämän puhelimen lähetetyt ja vastaanotetut tekstiviestit</string>
   <string name="sync_item_sms_title">Synkronoi viestit</string>
-  <string name="sync_item_title">Synkronoitavat kohteet</string>
+  <string name="sync_item_title">Synkronoi sovellustiedot</string>
   <string name="sync_off">Pois päältä</string>
   <string name="sync_on">Päällä</string>
   <string name="sync_sub_1_intl_sms">Lähtevä kansainvälinen tekstiviesti saatetaan vaatia tämän palvelun aktivointia varten. Operaattorisi veloittaa sinua tästä viestistä.</string>
