--- a/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/strings.xml
@@ -119,6 +119,11 @@
   <string name="adjust_saturation">Saturaatio</string>
   <string name="adjust_sharpen">Tarkenna</string>
   <string name="adjust_vignette">Vignette</string>
+  <string name="agreement_agree">Hyväksy</string>
+  <string name="agreement_optional_tip">(Valinnainen)</string>
+  <string name="agreement_quit">Poistu</string>
+  <string name="agreement_required_tip">(Pakollinen)</string>
+  <string name="agreement_summary">Lailliset asiakirjat</string>
   <string name="album_already_exists">Näytä</string>
   <string name="album_already_exists_msg">Albumi \"%s\" on jo olemassa</string>
   <string name="album_already_forced_top">On jo ylimpänä</string>
@@ -1283,6 +1288,15 @@ mukauttaaksesi Galleriasi"</string>
   <string name="people_mark_mode_title_no_mark_name">Valitse henkilö</string>
   <string name="people_page_label">Henkilöt</string>
   <string name="people_page_unname">Nimeämätön</string>
+  <string name="permissin_contract_desc">Nimeäkseen henkilöitä kuvissa</string>
+  <string name="permission_contract_name">Yhteystiedot</string>
+  <string name="permission_optional_category">Valinnaiset käyttöoikeudet</string>
+  <string name="permission_phone_desc">Laite ID:n mukaiset verkkopyynnöt</string>
+  <string name="permission_phone_name">Puhelin</string>
+  <string name="permission_require_category">Pakolliset käyttöoikeudet</string>
+  <string name="permission_storage_desc">Näyttääkseen, muokatakseen ja tallentaakseen kuvia</string>
+  <string name="permission_storage_name">Tallennustila</string>
+  <string name="permission_use_desc">Käyttöoikeudet</string>
   <string name="pet_album_display_name">Lemmikin kuvat</string>
   <string name="petabyteShort">Pt</string>
   <string name="photo">Kuvat</string>
@@ -1546,6 +1560,7 @@ mukauttaaksesi Galleriasi"</string>
   <string name="secret_reason_unknow_reasons">Tuntematon virhe</string>
   <string name="secret_reason_video_not_support">Videoita ei voi lisätä piilotettuun albumiin</string>
   <string name="see_ignore_faces">Näytä henkilöt, jotka olet ohittanut</string>
+  <string name="select_all">Valitse kaikki</string>
   <string name="select_image_operation">Lisätään kuvia</string>
   <string name="select_item_face">"Onko tämä '%s'?"</string>
   <string name="select_origin_tip">Alkuperäinen tiedosto (%s)</string>
