--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -122,6 +122,7 @@ ja optimoi valokuvasi näiden tietojen perusteella"</string>
   <string name="cannot_connect_camera_twice">Kameraan ei saada vieläkään yhteyttä. Kokeile käynnistää laite uudelleen.</string>
   <string name="cannot_connect_camera_volte_call">Videopuhelu on käynnissä, yritä myöhemmin uudelleen.</string>
   <string name="cannot_move_warning_message">Otetaan kuvaa, pidä laite vakaana</string>
+  <string name="capture_back_pressed_hint">Poistu napauttamalla uudelleen</string>
   <string name="color_effect_entry_berry">Marjat</string>
   <string name="color_effect_entry_blackwhite">M&amp;V</string>
   <string name="color_effect_entry_cookie">Keksi</string>
@@ -625,7 +626,7 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_video_time_lapse_frame_interval_entry_900">900X (30 sekunnin intervalli)</string>
   <string name="pref_video_time_lapse_frame_interval_title">Time-lapsen nopeus</string>
   <string name="preparing_sd">Tarkistetaan sisäistä tallennustilaa…</string>
-  <string name="record_back_pressed_hint">Lopeta nauhoitus koskettamalla uudelleen</string>
+  <string name="record_back_pressed_hint">Lopeta nauhoittaminen napauttamalla uudelleen</string>
   <string name="screen_on_proximity_sensor_hint">Poistaaksesi tämän ominaisuuden käytöstä, paina Äänenvoimakkuus ylös ja Takaisin -painikkeita samanaikaisesti.</string>
   <string name="screen_on_proximity_sensor_summary">Älä peitä kuulokealuetta</string>
   <string name="search_settings">Kamera Asetukset;Laatu;Kuvanlaatu;Kuvan Sijainti;Valokuvan sijainti;Kasvontunnistus;Kameran Ääni</string>
@@ -656,6 +657,7 @@ ja tuo henkilöt esiin."</string>
   <string name="start_capture">OK</string>
   <string name="sticker_tab1">Söpö</string>
   <string name="sticker_tab2">Hauska</string>
+  <string name="super_night_toast">Pidä puhelimesi vakaana kuvan ottamisen aikana</string>
   <string name="tap_to_exposure">Säädä valotus manuaalisesti napauttamalla</string>
   <string name="tap_to_focus">Tarkenna napauttamalla</string>
   <string name="text_ai_scene_selector_text_off">CONTRE-JOUR</string>
