--- a/Finnish/main/TeleService.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/TeleService.apk/res/values-fi-rFI/strings.xml
@@ -1661,7 +1661,7 @@ Ota yhteyttä operaattoriin, jos ongelma jatkuu."</string>
 Laitteesi vaihtaa automaattisesti matkapuhelinverkkoon (2G/3G) soittaakseen hätäpuhelun.
 
 Hätäpuhelut ovat mahdollisia vain matkapuhelinverkon kantavuusalueilla."</string>
-  <string name="vowifi_emergency_warning_title">ECC puheluita käyttäen Wi-Fi-puhelua</string>
+  <string name="vowifi_emergency_warning_title">Hätäpuhelut Wi-Fi-puhelulla</string>
   <string name="vpn_settings_not_available">Tämä käyttäjä ei voi käyttää VPN-asetuksia</string>
   <string name="vvm_unsupported_message_format">Viestin tyyppiä ei tueta. Kuuntele soittamalla numeroon %s.</string>
   <string name="wait_for_debugger">Odota vianetsintää</string>
