--- a/Finnish/main/BugReport.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/BugReport.apk/res/values-fi-rFI/strings.xml
@@ -119,6 +119,10 @@
   <string name="feedback_remind_login_btn">Kirjaudu</string>
   <string name="feedback_report_remind_login_desc">Kirjaudu Mi Tiliisi, jotta meidän insinöörit voivat olla sinuun yhteydessä. Voit myös katsella raporttisi edistymistä täältä \"Minun raportit\"."</string>
   <string name="feedback_report_remind_login_desc2">Voit myös nähdä raporttisi etenemistä menemällä \"Raporttini\".</string>
+  <string name="feedback_reproductivity_everytime">Aina</string>
+  <string name="feedback_reproductivity_occasionally">Silloin tällöin</string>
+  <string name="feedback_reproductivity_often">Usein</string>
+  <string name="feedback_reproductivity_once">Kerran</string>
   <string name="feedback_retest_label">Askeleet ongelman jäljentämiseen</string>
   <string name="feedback_select_images">Lisää kuva tai lyhytvideo</string>
   <string name="feedback_select_modem_log">Lisää modeemin lokitiedot</string>
@@ -173,6 +177,20 @@
   <string name="goon_feedback_main">Jatka</string>
   <string name="hint_feedback_main">Kuvaile ongelma</string>
   <string name="issue_search">Haku</string>
+  <string name="kr_authorization_agree">Hyväksy</string>
+  <string name="kr_authorization_contact">Tilit</string>
+  <string name="kr_authorization_contact_desc">Noutaakseen Mi Tilin tiedot ja vahvistaakseen tilisi</string>
+  <string name="kr_authorization_exit">Poistu</string>
+  <string name="kr_authorization_log_protocol">Lokiprotokolla (valinnainen)</string>
+  <string name="kr_authorization_log_protocol_desc">Jotta voimme parantaa sinulle tarjoamia palveluitamme, lähetämme käyttötiedot ja järjestelmän lokitiedot palvelimillemme. Nämä kohteet voivat sisältää henkilötietoja sekä tietoja laitteestasi ja verkostasi. Käytämme lähetettyjä kohteita analysoidaksemme ja paikallistaksemme järjestelmän ongelmia.</string>
+  <string name="kr_authorization_phone">Puhelin</string>
+  <string name="kr_authorization_phone_desc">Tunnistaakseen laitteen käyttäen IMEI- ja mallinumeroa sekä analysoidakseen ja paikallistaakseen ongelmia</string>
+  <string name="kr_authorization_privacy_policy">Tietosuojakäytäntö (pakollinen)</string>
+  <string name="kr_authorization_select_all">Valitse kaikki</string>
+  <string name="kr_authorization_storage">Tallennustila</string>
+  <string name="kr_authorization_storage_desc">Käyttääkseen tallennustilaa ja tallentaakseen kohteita mukaan lukien lokeja, kuvia ja videoita</string>
+  <string name="kr_authorization_summary">Lailliset asiakirjat</string>
+  <string name="kr_authorization_user_protocol">Käyttöehdot (pakollinen)</string>
   <string name="loading_apps">Ladataan listaa…</string>
   <string name="login_system_failed">Kirjautuminen epäonnistui, yritä uudestaan</string>
   <string name="logo_title">Palaute</string>
