--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
@@ -59,17 +59,6 @@
   <string name="acessibility_cal_notification">Kalenteri-ilmoitus</string>
   <string name="action_bar_return">Takaisin</string>
   <string name="action_text_card_manager">Kanava</string>
-  <string name="ad_card_connecting">连接中</string>
-  <string name="ad_card_download_count">%1$s人下载</string>
-  <string name="ad_card_download_count_million">%1$s万人下载</string>
-  <string name="ad_card_downloading">下载中</string>
-  <string name="ad_card_install">立即安装</string>
-  <string name="ad_card_installed">已安装</string>
-  <string name="ad_card_installing">安装中</string>
-  <string name="ad_card_network_error">无网络连接，请稍后重试！</string>
-  <string name="ad_card_open_app">马上打开</string>
-  <string name="ad_card_spread">推广</string>
-  <string name="ad_card_try">立即体验</string>
   <string name="add_anniversary">Lisää vuosipäivä</string>
   <string name="add_countdown">Lisää laskenta</string>
   <string name="add_event">Lisää tapahtuma</string>
@@ -435,10 +424,11 @@ Tarkista verkkoyhteys ja yritä uudelleen."</string>
   <string name="no_visiable_calendar_select_account">Lisää tili</string>
   <string name="no_visiable_calendar_title">Lisää tili</string>
   <string name="notification_channel_name">Kalenterimuistutukset</string>
-  <string name="olympic_rank">排名</string>
-  <string name="olympic_total">总数</string>
+  <string name="notification_open_setting_button_exit">Ei kiitos</string>
+  <string name="notification_open_setting_button_ok">Salli</string>
+  <string name="notification_open_setting_message">Et saa ilmoituksia tapahtumista, ellet salli Kalenterille oikeutta lähettää sinulle ilmoituksia.</string>
+  <string name="notification_open_setting_title">Sallitaanko Kalenteri-ilmoitukset?</string>
   <string name="olympic_vs">VS</string>
-  <string name="online_reminder_header_text">提醒</string>
   <string name="panchang_amanta">Amanta</string>
   <string name="panchang_amanta_month">Amanta Month:</string>
   <string name="panchang_ayana">Ayana</string>
