--- a/Finnish/main/CloudService.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CloudService.apk/res/values-fi-rFI/strings.xml
@@ -55,6 +55,7 @@
   <string name="ks_name_alipay">IFAA</string>
   <string name="ks_name_fido">FIDO</string>
   <string name="ks_name_soter">Soter</string>
+  <string name="ks_name_widevine">Widevine (L1)</string>
   <string name="ks_status_available">Käytettävissä</string>
   <string name="ks_status_unavailable">Ei käytettävissä</string>
   <string name="ks_update_certificate">Varmenne</string>
