--- a/Finnish/main/Contacts.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Contacts.apk/res/values-fi-rFI/strings.xml
@@ -10,11 +10,11 @@
   <string name="accessibility_contact_detail">Yhteystiedon tiedot</string>
   <string name="account_container_title">Tuotu</string>
   <string name="account_default">Paikallinen</string>
+  <string name="account_dual_sdn">SDN %s</string>
+  <string name="account_dual_sim">SIM-kortti %s</string>
   <string name="account_phone">Vain laite, ei synkronoitu</string>
   <string name="account_sdn">SDN</string>
-  <string name="account_sdn2">SDN %d</string>
   <string name="account_sim">SIM-kortti</string>
-  <string name="account_sim2">SIM-kortti %d</string>
   <string name="account_type_format">%1$s-osoite</string>
   <string name="actionIncomingCall">Saapuvat puhelut</string>
   <string name="action_menu_overflow_description">Lisää asetuksia</string>
