--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -291,7 +291,7 @@ Muotokuvatilassa"</string>
   <string name="live_speed_fragment_tab_name">Nauhoitusnopeus</string>
   <string name="live_speed_normal">Tavallinen</string>
   <string name="live_speed_slow">Hidas</string>
-  <string name="live_sticker_fragment_tab_name">Tarrat</string>
+  <string name="live_sticker_fragment_tab_name">TikTok Taikatarrat</string>
   <string name="live_sticker_network_error_hint">Verkkovirhe</string>
   <string name="live_sticker_updating">Päivitetään…</string>
   <string name="makeup_reset_toast">Poista meikkitehosteet</string>
@@ -696,6 +696,7 @@ Laajakulmatila tulee apuun, kun et voi liikkua kauemmaksi kohteestasi."</string>
   <string name="video_effect_entry_polaroid">Polaroi</string>
   <string name="video_file_name_format">"'VID'_yyyyMMdd_HHmmss"</string>
   <string name="video_reach_size_limit">Kokorajoitus saavutettu.</string>
+  <string name="video_ultra_clear_tip">4K UHD</string>
   <string name="view_privacy_policy">Näytä Tietosuojakäytäntö</string>
   <string name="wait">Odota hetki…</string>
   <string name="zoom_no_support_tip_48M">Zoomaus ei toimi 48MP-tilassa</string>
